# tango-moenchzmq

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README  README.md
.github/workflows/: cmake-single-platform.yml
TangoDevice/: TestDeviceLunin.xmi  TestDeviceLuninClass.h  TestDeviceLuninStateMachine.cpp  main.cpp
ZmqProcessor/: CMakeLists.txt
ZmqProcessor/src/: CMakeLists.txt  example_nexus.cpp  main_sls.cpp  zmq_receiver.cpp
cmake/: FindTango.cmake
pogo-project/: ClassFactory.cpp  MoenchZMQ.cpp  MoenchZMQ.h  MoenchZMQ.xmi  MoenchZMQClass.cpp  MoenchZMQClass.h  MoenchZMQStateMachine.cpp  main.cpp
scripts/: generate_previews.sh
src/: CMakeLists.txt  CMakeLists_old.txt  ClassFactory.cpp  ComputationBackend.cpp  ComputationBackend.hpp  TestDeviceLunin.cpp  TestDeviceLunin.h  TestDeviceLuninClass.cpp  ZmqReceiverTest.cpp  examples.cpp
src/backend/: CMakeLists.txt  CPUComputationBackend.cpp  CPUComputationBackend.hpp  ComputationBackend.cpp  ComputationBackend.hpp  ComputationTest.cpp  FileWriter.hpp  Frames.hpp  HDFWriter.cpp  HDFWriter.hpp  NeXuSWriter.cpp  NeXuSWriter.hpp  ZMQListener.cpp  ZMQListener.hpp  remap_array.hpp
src/tango-moenchcontrol/: CMakeLists.txt
src/tango-moenchcontrol/tangods/: CMakeLists.txt  ClassFactory.cpp  MoenchControl.cpp  MoenchControl.h  MoenchControl.xmi  MoenchControlClass.cpp  MoenchControlClass.h  MoenchControlStateMachine.cpp  main.cpp
src/tango-moenchzmq/: CMakeLists.txt
src/tango-moenchzmq/backend/: CMakeLists.txt  CPUComputationBackend.cpp  CUDAProcessing.cu  ComputationTest.cpp
src/tango-moenchzmq/tangods/: CMakeLists.txt  MoenchZMQ.cpp  MoenchZMQStateMachine.cpp
src/tangods/: CMakeLists.txt  MoenchZMQ.cpp  MoenchZMQ.h  MoenchZMQ.xmi  MoenchZMQClass.cpp  MoenchZMQClass.h  MoenchZMQStateMachine.cpp
